Minor fixes: - Play next correctly bound (`this` was out of scope) - Durations of more than 1 hour no longer break the line

--- a/app/styles/_track.sass
+++ b/app/styles/_track.sass
@@ -1,3 +1,4 @@
+$POPULARITY_PROGRESS_WIDTH: 5.8rem
 
 .track
   display: flex
@@ -52,7 +53,7 @@
     display: none
 
   .title
-    margin-right: 2rem
+    margin-right: 1.5rem
     flex-grow: 2
 
     .untitled
@@ -74,14 +75,14 @@
     color: gray
 
   .popularity
-    width: 5rem
+    width: $POPULARITY_PROGRESS_WIDTH
 
     .bar
       background-color: gray
       height: 2px
 
   .progress
-    width: 5rem
+    width: $POPULARITY_PROGRESS_WIDTH
     text-align: right
 
   .artist
